simple version of source

--- a/backend/themes/default/templates/about.html
+++ b/backend/themes/default/templates/about.html
@@ -12,6 +12,10 @@
             quickly navigate through different sections. You can easily add, edit, and delete offers, sources, and
             domains, as well as view detailed reports on your campaigns' performance.
         </p>
+        <h3>About Pages</h3>
+        <p class="mt-4">
+            <b>Sources</b> — in the tracker it is a set of templates for setting up UTM tag reciving. As well for sending S2S-Postback (conversions).
+        </p>
     </v-container>
 </script>
 
