--- a/backend/themes/default/templates/sources.html
+++ b/backend/themes/default/templates/sources.html
@@ -12,15 +12,152 @@
             </v-col>
         </v-row>
 
+        <v-dialog v-model="dialog" max-width="800px">
+            <v-card dark>
+                <v-card-title>
+                    <span class="text-h6">{{ isEdit ? 'Edit Source' : 'Add Source' }}</span>
+                </v-card-title>
+
+                <v-card-text>
+
+                    <v-text-field
+                            label="Source Name"
+                            v-model="form.name"
+                            outlined
+                            dense
+                    ></v-text-field>
+
+                    <v-text-field
+                            label="Traffic Loss (%)"
+                            v-model="form.traffic_loss"
+                            type="number"
+                            step="0.01"
+                            outlined
+                            dense
+                    ></v-text-field>
+
+                    <v-text-field
+                            label="S2S Postback URL"
+                            v-model="form.s2s_postback"
+                            outlined
+                            dense
+                    ></v-text-field>
+
+                    <v-subheader class="pl-0">S2S Postback Statuses</v-subheader>
+                    <v-row dense>
+                        <v-col cols="3" v-for="status in ['sale', 'lead', 'reject', 'upsell']" :key="status">
+                            <v-checkbox
+                                    :label="status"
+                                    v-model="form.s2s_postback_statuses[status]"
+                                    dense
+                            ></v-checkbox>
+                        </v-col>
+                    </v-row>
+
+                    <v-text-field
+                            label="Taboola API Key"
+                            v-model="form.additional_settings.taboola_api_key"
+                            outlined
+                            dense
+                    ></v-text-field>
+
+                    <v-subheader class="pl-0">Settings Mapping</v-subheader>
+                    <v-row
+                            v-for="(setting, index) in form.settings"
+                            :key="index"
+                            dense
+                            class="mb-2"
+                    >
+                        <v-col cols="3">
+                            <v-text-field
+                                    label="Name"
+                                    v-model="setting.name"
+                                    :readonly="!setting.editable_name"
+                                    outlined
+                                    dense
+                            ></v-text-field>
+                        </v-col>
+                        <v-col cols="3">
+                            <v-text-field
+                                    label="Parameter"
+                                    v-model="setting.parameter"
+                                    :readonly="!setting.editable_name"
+                                    outlined
+                                    dense
+                            ></v-text-field>
+                        </v-col>
+                        <v-col cols="4">
+                            <v-text-field
+                                    label="Token"
+                                    v-model="setting.token"
+                                    outlined
+                                    dense
+                            ></v-text-field>
+                        </v-col>
+                        <v-col cols="2" class="d-flex align-center justify-center">
+                            <v-icon v-if="setting.editable_name" @click="removeSetting(index)" color="red">mdi-delete
+                            </v-icon>
+                        </v-col>
+                    </v-row>
+
+                    <v-btn
+                            small
+                            color="primary"
+                            class="mt-2"
+                            @click="addSetting"
+                    >
+                        Add Parameter
+                    </v-btn>
+
+                </v-card-text>
+
+                <v-card-actions>
+                    <v-spacer></v-spacer>
+                    <v-btn color="grey" text @click="close">Cancel</v-btn>
+                    <v-btn color="success" text @click="save">Save</v-btn>
+                </v-card-actions>
+            </v-card>
+        </v-dialog>
+
+
         <v-row dense class="mt-4">
             <v-col>
                 <v-card>
                     <v-data-table
                             :headers="headers"
-                            :items="desserts"
+                            :items="sources"
                             :items-per-page="5"
                             class="elevation-1"
-                    ></v-data-table>
+                    >
+                        <template v-slot:item.s2s_postback_statuses="{ item }">
+                            {{ Object.keys(item.s2s_postback_statuses).filter(k =>
+                            item.s2s_postback_statuses[k]).join(', ') }}
+                        </template>
+                        <template v-slot:item.created_at="{ item }">
+                            {{ $formatDate(item.created_at) }}
+                        </template>
+                        <template v-slot:item.updated_at="{ item }">
+                            {{ $formatDate(item.updated_at) }}
+                        </template>
+                        <template v-slot:item.actions="{ item }">
+                            <v-btn
+                                    color="orange"
+                                    small
+                                    outlined
+                                    @click="openEdit(item)"
+                            >
+                                Edit
+                            </v-btn>
+                            <v-btn
+                                    color="red"
+                                    small
+                                    outlined
+                                    @click="deleteSource(item)"
+                            >
+                                Delete
+                            </v-btn>
+                        </template>
+                    </v-data-table>
                 </v-card>
             </v-col>
         </v-row>
@@ -32,109 +169,219 @@
         template: '#sources-template',
         data() {
             return {
+                isEdit: false,
+                dialog: false,
+                loadingSources: false,
                 headers: [
-                    {
-                        text: 'Dessert (100g serving)',
-                        align: 'start',
-                        sortable: false,
-                        value: 'name',
-                    },
-                    {text: 'Calories', value: 'calories'},
-                    {text: 'Fat (g)', value: 'fat'},
-                    {text: 'Carbs (g)', value: 'carbs'},
-                    {text: 'Protein (g)', value: 'protein'},
-                    {text: 'Iron (%)', value: 'iron'},
+                    {text: 'Name', value: 'name'},
+                    {text: 'Traffic Loss', value: 'traffic_loss'},
+                    {text: 'Postback', value: 's2s_postback'},
+                    {text: 'Statuses', value: 's2s_postback_statuses'},
+                    {text: 'Created', value: 'created_at'},
+                    {text: 'Updated', value: 'updated_at'},
+                    {text: 'Actions', value: 'actions', sortable: false}
                 ],
-                desserts: [
-                    {
-                        name: 'Frozen Yogurt',
-                        calories: 159,
-                        fat: 6.0,
-                        carbs: 24,
-                        protein: 4.0,
-                        iron: 1,
+                sources: [],
+                form: {
+                    id: null,
+                    name: '',
+                    traffic_loss: 0,
+                    s2s_postback: '',
+                    s2s_postback_statuses: {
+                        sale: true,
+                        lead: false,
+                        reject: false,
+                        upsell: false
                     },
-                    {
-                        name: 'Ice cream sandwich',
-                        calories: 237,
-                        fat: 9.0,
-                        carbs: 37,
-                        protein: 4.3,
-                        iron: 1,
+                    additional_settings: {
+                        taboola_api_key: ''
                     },
-                    {
-                        name: 'Eclair',
-                        calories: 262,
-                        fat: 16.0,
-                        carbs: 23,
-                        protein: 6.0,
-                        iron: 7,
-                    },
-                    {
-                        name: 'Cupcake',
-                        calories: 305,
-                        fat: 3.7,
-                        carbs: 67,
-                        protein: 4.3,
-                        iron: 8,
-                    },
-                    {
-                        name: 'Gingerbread',
-                        calories: 356,
-                        fat: 16.0,
-                        carbs: 49,
-                        protein: 3.9,
-                        iron: 16,
-                    },
-                    {
-                        name: 'Jelly bean',
-                        calories: 375,
-                        fat: 0.0,
-                        carbs: 94,
-                        protein: 0.0,
-                        iron: 0,
-                    },
-                    {
-                        name: 'Lollipop',
-                        calories: 392,
-                        fat: 0.2,
-                        carbs: 98,
-                        protein: 0,
-                        iron: 2,
-                    },
-                    {
-                        name: 'Honeycomb',
-                        calories: 408,
-                        fat: 3.2,
-                        carbs: 87,
-                        protein: 6.5,
-                        iron: 45,
-                    },
-                    {
-                        name: 'Donut',
-                        calories: 452,
-                        fat: 25.0,
-                        carbs: 51,
-                        protein: 4.9,
-                        iron: 22,
-                    },
-                    {
-                        name: 'KitKat',
-                        calories: 518,
-                        fat: 26.0,
-                        carbs: 65,
-                        protein: 7,
-                        iron: 6,
-                    },
-                ],
+                    settings: []
+                }
+
 
             }
         },
-        computed: {
-            dateRangeText() {
-                return this.date_range.join(' ~ ')
-            },
+        mounted() {
+            this.loadSources();
+            this.$root.$on('load-sources', this.loadSources);
         },
+        methods: {
+            getDefaultSettings() {
+                return [
+                    {name: 'Keyword', parameter: 'keyword', token: '', editable_name: false},
+                    {name: 'Cost', parameter: 'cost', token: '', editable_name: false},
+                    {name: 'Currency', parameter: 'currency', token: '', editable_name: false},
+                    {name: 'External ID', parameter: 'external_id', token: '', editable_name: false},
+                    {name: 'Creative ID', parameter: 'utm_creative', token: '{{ad.name}}', editable_name: false},
+                    {
+                        name: 'AD Campaign ID',
+                        parameter: 'utm_campaign',
+                        token: '{{campaign.name}}',
+                        editable_name: false
+                    },
+                    {name: 'Keyword', parameter: 'keyword', token: '', editable_name: false},
+                    {name: 'Site', parameter: 'utm_source', token: '{{site_source_name}}', editable_name: false},
+                    {name: 'Sub id 1', parameter: 'sub_id_1', token: '', editable_name: true},
+                    {name: 'Sub id 2', parameter: 'sub_id_2', token: '', editable_name: true},
+                    {name: 'Sub id 3', parameter: 'sub_id_3', token: '', editable_name: true},
+                    {name: 'Sub id 4', parameter: 'sub_id_4', token: '', editable_name: true},
+                    {name: 'Sub id 5', parameter: 'sub_id_5', token: '', editable_name: true},
+                    {name: 'Sub id 6', parameter: 'sub_id_6', token: '', editable_name: true},
+                    {name: 'Sub id 7', parameter: 'sub_id_7', token: '', editable_name: true},
+                    {name: 'Sub id 8', parameter: 'sub_id_8', token: '', editable_name: true},
+                    {name: 'Sub id 9', parameter: 'sub_id_9', token: '', editable_name: true},
+                    {name: 'Sub id 10', parameter: 'sub_id_10', token: '', editable_name: true}
+                ];
+            },
+            addSetting() {
+                this.form.settings.push({
+                    name: '',
+                    parameter: '',
+                    token: '',
+                    editable_name: true
+                });
+            },
+
+            removeSetting(index) {
+                this.form.settings.splice(index, 1);
+            },
+            loadSources() {
+                this.loadingSources = true;
+                fetch("/backend/api/sources/", {
+                    credentials: "include"
+                })
+                    .then(res => res.json())
+                    .then(data => {
+                        this.sources = data;
+                    })
+                    .catch(err => {
+                        console.error(err);
+                        this.$root.$emit("show-message", {type: "error", text: err.message});
+                    })
+                    .finally(() => {
+                        this.loadingSources = false;
+                    });
+            },
+
+            openCreate() {
+                this.isEdit = false;
+                this.dialog = true;
+                this.form = {
+                    id: null,
+                    name: '',
+                    traffic_loss: 0,
+                    s2s_postback: '',
+                    s2s_postback_statuses: {
+                        sale: true,
+                        lead: false,
+                        reject: false,
+                        upsell: false
+                    },
+                    additional_settings: {
+                        taboola_api_key: ''
+                    },
+                    settings: this.getDefaultSettings()
+                };
+            },
+
+            openEdit(source) {
+                this.isEdit = true;
+                this.dialog = true;
+                this.form = {
+                    id: source.id,
+                    name: source.name,
+                    traffic_loss: source.traffic_loss,
+                    s2s_postback: source.s2s_postback,
+                    s2s_postback_statuses: source.s2s_postback_statuses || {},
+                    additional_settings: source.additional_settings || {},
+                    settings: source.settings || []
+                };
+            },
+
+            save() {
+                if (!this.form.name) {
+                    this.$root.$emit("show-message", {type: "error", text: "Name is required."});
+                    return;
+                }
+
+                const payload = {
+                    name: this.form.name,
+                    traffic_loss: this.form.traffic_loss,
+                    s2s_postback: this.form.s2s_postback,
+                    s2s_postback_statuses: this.form.s2s_postback_statuses,
+                    additional_settings: this.form.additional_settings,
+                    settings: this.form.settings
+                };
+
+                const method = this.isEdit ? "PATCH" : "POST";
+                const url = this.isEdit
+                    ? `/backend/api/sources/${this.form.id}`
+                    : `/backend/api/sources/`;
+
+                fetch(url, {
+                    method,
+                    headers: {"Content-Type": "application/json"},
+                    body: JSON.stringify(payload),
+                    credentials: "include"
+                })
+                    .then(async res => {
+                        const text = await res.text();
+                        if (!res.ok) {
+                            let msg = text;
+                            try {
+                                const err = JSON.parse(text);
+                                msg = err.detail || msg;
+                            } catch {
+                            }
+                            throw new Error(msg);
+                        }
+                        this.dialog = false;
+                        this.$root.$emit("show-message", {
+                            type: "success",
+                            text: this.isEdit ? "Source updated" : "Source created"
+                        });
+                        this.loadSources();
+                    })
+                    .catch(err => {
+                        this.$root.$emit("show-message", {type: "error", text: err.message});
+                    });
+            },
+
+            deleteSource(source) {
+                if (!confirm(`Delete source "${source.name}"?`)) return;
+
+                fetch(`/backend/api/sources/${source.id}`, {
+                    method: "DELETE",
+                    credentials: "include"
+                })
+                    .then(async res => {
+                        const text = await res.text();
+                        if (!res.ok) {
+                            let msg = text;
+                            try {
+                                const err = JSON.parse(text);
+                                msg = err.detail || msg;
+                            } catch {
+                            }
+                            throw new Error(msg);
+                        }
+                        this.$root.$emit("show-message", {
+                            type: "success",
+                            text: "Source deleted"
+                        });
+                        this.loadSources();
+                    })
+                    .catch(err => {
+                        this.$root.$emit("show-message", {type: "error", text: err.message});
+                    });
+            },
+
+            close() {
+                this.dialog = false;
+            }
+        }
+
     });
 </script>
 {% endraw %}
