part of campaigns page

--- a/backend/themes/default/templates/domains.html
+++ b/backend/themes/default/templates/domains.html
@@ -107,7 +107,7 @@
                                     color="red"
                                     small
                                     outlined
-                                    @click="deleteDomain(item)"
+                                    @click="deleteCampaign(item)"
                             >
                                 Delete
                             </v-btn>
